tests/ui/attributes/rustc_confusables_assoc_fn.stderr
error[E0599]: no associated function or constant named `bar` found for struct `S` in the current scope
  --> $DIR/rustc_confusables_assoc_fn.rs:14:8
   |
LL | struct S;
   | -------- associated function or constant `bar` not found for this struct
...
LL |     S::bar();
   |        ^^^ associated function or constant not found in `S`
   |
help: you might have meant to use `foo`
   |
LL -     S::bar();
LL +     S::foo();
   |

error[E0599]: no method named `baz` found for struct `S` in the current scope
  --> $DIR/rustc_confusables_assoc_fn.rs:19:7
   |
LL | struct S;
   | -------- method `baz` not found for this struct
...
LL |     s.baz(10);
   |       ^^^ method not found in `S`
   |
help: you might have meant to use `qux`
   |
LL -     s.baz(10);
LL +     s.qux(10);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
